# pasd-core

./: .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  errors.rs  key.rs  main.rs  secret.rs  utils.rs
src/handlers/: add_key.rs  add_secret.rs  get_secret.rs  list_keys.rs  list_secrets.rs  mod.rs  remove_key.rs  remove_secret.rs
