[package]
name = "pasd-lib"
version = "0.1.0"
authors = ["mbnuqw <maxbadryzlov@gmail.com>"]

# [lib]
# name = "pasd"
# path = "src/lib.rs"
# crate-type = ["cdylib", "staticlib"]

[[bin]]
name = "pasdd"
path = "src/main.rs"

[dependencies]
con = { path = "../../con/con-rust" }
jni = { version = "0.6", default-features = false }
chrono = "0.4.6"
rand = "0.5"
serde = "1.0"
serde_json = "1.0"
rmp-serde = "0.13.7"
serde_derive = "1.0"
toml = "0.4"
block-modes = "0.3.1"
aes = "0.3.2"
block-cipher-trait = "0.6.2"
sha2 = "0.8.0"
hmac = "0.7.0"
scrypt = { version = "0.2.0", default-features = false }
